--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "gulp-imagemin": "^2.2.1",
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
-    "gulp-ruby-sass": "~1.0.0-alpha.3",
+    "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.1.0",
     "imagemin-pngquant": "^4.0.0"
   }
