--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "browser-sync": "^2.0.0",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "^1.0.1",
+    "gulp-bower": "0.0.13",
+    "gulp-compass": "^2.1.0",
     "gulp-imagemin": "^2.2.1",
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
